--- a/plankcoin-node/Cargo.toml
+++ b/plankcoin-node/Cargo.toml
@@ -27,6 +27,9 @@ thiserror = { workspace = true }
 clap = { version = "3.2.22", features = ["derive"] }
 config = "0.13.2"
 
+# terminal
+crossterm = "0.25"
+
 # util
 fn_once = "0.2.0"
 lazy_static = "1.4.0"
