--- a/plankcoin-core/Cargo.toml
+++ b/plankcoin-core/Cargo.toml
@@ -19,3 +19,10 @@ pretty_env_logger = { workspace = true }
 # error
 anyhow = { workspace = true }
 thiserror = { workspace = true }
+
+# serde
+serde = { workspace = true }
+ed25519-dalek = { version = "1", features = ["serde"] }
+
+# util
+rand = "0.7" # 0.7 for compatibility with ed25519-dalek
