--- a/plankcoin-node/Cargo.toml
+++ b/plankcoin-node/Cargo.toml
@@ -27,14 +27,18 @@ pretty_env_logger = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 
-# cli & config
-clap = { version = "3.2.22", features = ["derive"] }
-config = "0.13.2"
+# serde
+serde = { workspace = true }
+bincode = "1.3"
 
-# terminal
-crossterm = "0.25"
+# crypto
+aes-gcm = "0.10" # it is not suitable for use on processors with a variable-time multiplication operation (e.g. short circuit on multiply-by-zero / multiply-by-one, such as certain 32-bit PowerPC CPUs and some non-ARM microcontrollers).
+
+# cli & config
+clap = { version = "3.2", features = ["derive"] }
+config = "0.13"
+console = "0.15"
 
 # util
 fn_once = "0.3"
-lazy_static = "1.4.0"
-serde = { version = "1.0.145", features = ["derive"] }
+lazy_static = "1.4"
