--- a/plankcoin-core/Cargo.toml
+++ b/plankcoin-core/Cargo.toml
@@ -33,3 +33,5 @@ sha3 = "0.10"
 # util
 rand = "0.7" # 0.7 for compatibility with ed25519-dalek
 primitive-types = "0.12"
+bitflags = "1.3.2"
+dns-lookup = "1.0.8"
